# darkpool-gateway

./: .gitignore  Procfile  Readme.md  nixpacks.toml
.github/workflows/: deploy-bots.yml  hardhat_tests.yml.yml  noir_checks.yml
circuits/: Nargo.toml  clean.sh  compile.sh  execute.sh  run.sh
circuits/claim/: Nargo.toml  Prover.toml
circuits/helpers/: Nargo.toml
circuits/withdrawOrTransfer/: Nargo.toml  Prover.toml
contracts/: .gitignore  hardhat.config.ts  package-lock.json  package.json  proof.hex  verifier.sol
contracts/scripts/: UserClient.ts  listenForPriceUpdates.ts  runLiquidationScenario.ts  testBackend.ts
contracts/test/: Lock.ts
frontend/: .htaccess  README.md  dist.7z  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
frontend/public/: main.worker.js  noirc_abi_wasm_bg.wasm
frontend/src/: App.tsx  index.css  main.tsx
perp-minimal-backend/indexer-server/: Cargo.toml  Dockerfile
perp-minimal-backend/indexer-server/abi/: ClearingHouseV2.json  PrivacyProxy.json  TokenPool.json
perp-minimal-backend/indexer-server/darkpool_db/: db  snap.000000000000028B
perp-minimal-backend/indexer-server/src/: api.rs  config.rs  database.rs  indexer.rs  main.rs  models.rs
perp-minimal-backend/liquidation-bot/: Cargo.toml  Dockerfile
perp-minimal-backend/oracle-bot/: Cargo.toml  Dockerfile
perp-minimal-backend/oracle-bot/abi/: Oracle.json
perp-minimal-backend/oracle-bot/src/: main.rs
playground/Ts/: commitment.play.ts  leanIMT.ts  package.json  paramBuilder.ts  tsconfig.json
temp-hardhat/: package-lock.json
(+143 files in other folders)
