[package]
name = "indexer-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core Async Runtime
tokio = { version = "1", features = ["full"] }

# Web Server (Axum)
axum = "0.8.4"
tower-http = { version = "0.6.6", features = ["cors"] }

# Database (Sled)
sled = "0.34"

# Blockchain (Ethers)
ethers = { version = "2.0", features = ["abigen", "ws", "rustls"] }

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
anyhow = "1.0"
hex = "0.4"
futures = "0.3"

# [target.x86_64-unknown-linux-gnu]
# linker = "clang"
# rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[profile.dev]
codegen-units = 256